changement de la couleur

--- a/src/global.scss
+++ b/src/global.scss
@@ -1,5 +1,5 @@
 // Colors
-$backgroundColor: #22244B;
+$backgroundColor: #F9F7B7;
 $highlightColor: #315897;
 $actionColor: #61BCA3;
 $textColor: #FFFFFF;
