--- a/src/global.scss
+++ b/src/global.scss
@@ -1,14 +1,21 @@
 // Colors
-$backgroundColor: #F9F7B7;
-$highlightColor: #000;
-$actionColor: #61BCA3;
-$textColor: #FFFFFF;
+$BgColorLight: #fff;
+$BgColor: #6ABFAD;
+$BgColorDark: #222332;
+
+$textColor: #fff;
+
 // Media sizes
 $largeScreen: 1690px;
 $oldScreen: 1280px;
 $tablet: 980px;
 $largePhone: 736px;
 $phone: 480px;
+
+// Google font
+$fontstack: 'Raleway', sans-serif;
+
+
 
 /**
  * Globals
@@ -22,12 +29,11 @@ html, body {
   width: 100vw;
   height: 100vh;
   flex: 1;
-  background-color: $backgroundColor;
   color: $textColor;
-  font-family: Arial, serif;
-  font-size: 5vw;
+  font-family: $fontstack;
+  font-size: 4vw;
   @media (min-width: $tablet), (orientation: landscape) {
-    font-size: 2vw;
+    font-size: 1.5vw;
   }
 }
 
@@ -35,14 +41,44 @@ html, body {
  * Defaults
  */
 
-h1, h2 {
-  font-size: 1.5rem;
-  font-weight: bold;
+%align{   
+  font-weight: normal; 
+  text-transform: uppercase; 
+  font-weight: 600;      
+}
+
+@mixin title($color, $size){
+    @extend %align;
+    color: $color;
+    font-size: $size;
+}
+
+%alignFlex{
+    display: flex;
+    align-items: center; 
+}
+
+@mixin flex($content){
+    @extend %alignFlex;
+    justify-content: $content;
+}
+
+%sectionSpace{
+    padding: 40px 0;
+}
+
+@mixin transition($transition) {
+    -moz-transition:    $transition;
+    -ms-transition:    $transition;
+    -o-transition:      $transition;
+    -webkit-transition: $transition;
+    transition:         $transition;
 }
 
 a.link {
   text-decoration: none;
   color: $textColor;
+  text-align: center;    
 }
 
 /**
@@ -51,10 +87,9 @@ a.link {
 .nav-header {
   flex-grow: 0;
 
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
-  background-color: $textColor;
+  @include flex(space-between); 
+  padding: 0 10px;
+  background-color: $BgColorLight;
 
   flex-direction: column;
   @media (min-width: $tablet) {
@@ -62,22 +97,23 @@ a.link {
   }
 
   .nav-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @include flex(space-between); 
     flex: 1;
 
+    img{
+      width: 10vw;          
+    }  
+      
     h1 {
-      margin: 0;
-      color: $highlightColor;
-      font-size: 1.5rem;
-    }
+      @include title($BgColorDark, .8rem);
+      margin-top: 0;    
+    }  
   }
   .nav-open {
     font-size: 1.2rem;
 
     color: $textColor;
-    background-color: $actionColor;
+    background-color: #000;
 
     padding: 0.5rem;
     border-radius: 4px;
@@ -99,20 +135,18 @@ a.link {
   }
 
   nav {
-    display: none;
-    @media (min-width: $tablet) {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      @include flex(center);
+    @media (max-width: $tablet) {
+       display: none;
     }
   }
 
   nav a {
     padding: 15px;
-    color: $highlightColor;
+    color: $BgColorDark;
     &:hover {
-      background-color: $actionColor;
-      color: $textColor
+      background-color: $BgColor;
+      color: $textColor;
     }
     @media (max-width: $tablet - 1) {
       display: block;
@@ -128,61 +162,130 @@ a.link {
   flex: 1;
   overflow-y: scroll;
   > section, .presentation {
-    display: flex;
+    @include flex(center);  
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
     text-align: center;
 
     min-height: 100%; // Take a complete screen height minus the top bar.
 
-    &:nth-of-type(2n+1) {
-      background-color: $highlightColor;
+    &:first-child {
+      background-color: $BgColorDark;
     }
-    &:nth-of-type(2n), &.presentation {
-      background-color: $backgroundColor;
-    }
+//    &:nth-of-type(2n), &.presentation {
+//      background-color: $BgColorDark;
+//    }
   }
 }
 
 .presentation {
-  .presentation-date {
-    font-size: 1.5rem;
-    font-weight: bold;
+  & .presentation-intro{
+    @extend %sectionSpace;    
+  }    
+  h1{
+    @include title($BgColorLight, 2rem);   
+  }    
+  h2 {
+    line-height: 2.8rem;
+    font-weight: 500;  
+    font-size: 2vw;  
+  }    
+  & .presentation-date {
+    @include flex(center); 
+    font-size: 1.8vw; 
+    width: 100%;
+    background-color: $BgColor;
+    padding: 30px 0;  
+    margin-bottom: 0;  
+      
+    img{
+        margin-right: 15px;
+    }  
   }
+  & .presentation-event{
+    @include flex(center); 
+    background-color: $BgColorLight;
+    margin: 0;
+    color: $BgColorDark;  
+      
+    img{
+      width: 50%;
+      height: 100%;
+      margin-right: 25px;
+    }  
+    p{
+      line-height: 2.5vw;    
+      text-align: left;
+    }
+  }    
 }
 
 .themes {
+  @extend %sectionSpace;    
+  h1{
+    @include title($BgColorDark, 2rem);   
+  }   
+  p{
+    color: $BgColorDark;
+  }    
   ul {
     padding: 0;
     margin: 0;
     list-style: none;
-
-    display: flex;
+    @include flex(space-evenly); 
     flex-wrap: wrap;
-    justify-content: space-evenly;
     li {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      @include flex(center); 
 
       font-size: 1.2rem;
-      font-weight: bold;
+      font-weight: 500;  
 
-      background-color: $actionColor;
-      border-radius: 50%;
-      width: 60vmin;
-      height: 60vmin;
-      margin: 5%;
-      @media (min-width: $largePhone) {
-        width: 20vw;
-        height: 20vw;
-      }
+      border-radius: 5%;
+//      width: 60vmin;
+//      height: 60vmin;
+      margin: 4vw;
+        
+      background-size: 100%;
+//      border: 1px solid $BgColorDark;    
+   
+        &.design{ background-image: url(../img/1_design.svg);}
+        &.front{ background-image: url(../img/2_front.svg);}
+        &.cloud{ background-image: url(../img/3_cloud.svg);}
+        &.jeux{ background-image: url(../img/4_jeux.svg);}
+        &.objets{ background-image: url(../img/5_objets.svg);}
+        &.archi{ background-image: url(../img/6_archi.svg);}
+        &.outils{ background-image: url(../img/7_outils.svg);}
+    
+        & span{
+            @include transition(all .3s);
+            transform: scale(0) rotate(180deg);
+            color: $BgColorLight;
+            background-color: rgba($BgColorDark, .85);
+            width: 100%;
+            height: 100%;
+            @include flex(center);
+            line-height: 3vw;
+            border-radius: 5%;
+        }
+        
+        &:hover span{
+            transform: scale(1) rotate(0);
+        }
+        
+        
+      @media (min-width: $tablet) {
+        width: 14vw;
+        height: 14vw;
+      }      
     }
   }
 }
 
 .numbers {
+  @extend %sectionSpace; 
+  background-color: $BgColorDark;  
+  h1{
+    @include title($BgColorLight, 2rem);   
+  }     
   ul {
     padding: 0;
     margin: 0;
@@ -193,9 +296,23 @@ a.link {
   }
 
   @media (min-width: $tablet) {
-    flex-direction: row !important;
-    & > * {
-      flex: 1;
-    }
+
   }
+}
+
+#quisommesnous{
+  @extend %sectionSpace; 
+  background-image: url(../img/team.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;    
+  background-color: $BgColor;    
+  background-blend-mode: multiply;    
+}
+#participer{
+  @extend %sectionSpace; 
+  background-color: $BgColor;       
+}
+#proposer{
+  @extend %sectionSpace; 
+  background-color: $BgColorDark;       
 }
